src/test/deca/context/invalid/created/object/equals_int_null.deca
// Description :
//    test equals entre un int et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
int a;
null b;
int c = a.equal(b);
}
